<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nonAuth.LoginActivity">


    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/inputs"
        android:textCursorDrawable="@android:color/black"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/inputs"
        android:textCursorDrawable="@android:color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="4dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="23dp"
        android:gravity="end"
        android:text="@string/forget_password"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_password_link"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/buttons"
        android:padding="4dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/need_new_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="23dp"
        android:text="@string/need_new_account"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>