<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nonAuth.RegisterActivity">


    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:textCursorDrawable="@android:color/black"
        android:padding="4dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_email"
        android:textCursorDrawable="@android:color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons"/>

    <TextView
        android:id="@+id/already_have_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_button"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="23dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

</RelativeLayout>