<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nonAuth.ForgetPasswordActivity">

    <EditText
        android:id="@+id/email_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_confirm"
        android:padding="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons"/>

    <Button
        android:id="@+id/cancel_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_password_button"
        android:padding="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons"/>

</RelativeLayout>