<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/set_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textCursorDrawable="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:hint="@string/hey_i_am_available_now"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textCursorDrawable="@android:color/black"
        android:textStyle="bold" />


    <Button
        android:id="@+id/update_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_status"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/buttons"
        android:padding="6dp"
        android:text="@string/update"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>